# Ayumu_Bot

./: .gitignore  CoreConf.conf  Listen.py  Listen_test.py  bot.py  pyproject.toml  requirements.txt  start.py  start_bot.sh  start_linux.py  uninstallPip.py
Based/: Activity.py  Config.py  Event.py  EventData.py  Listen.py  Login.py  Message.py  QR_Cout.py  Send_Message.py  Stauts.py  ToUpload_File.py
Config/: config_example.yaml
Plugins/Anime/: Anime.py
Plugins/Bili/: BiliInfo.py  requirements.txt
Plugins/CapooPic/: __init__.py
Plugins/Daily_CheckIn/: __init__.py
Plugins/LongPic/: __init__.py
Plugins/Ncm_music/: config.yaml  download_ncm.py  ncm.py  ncm_info.py  ncmcard.py  post_request.py
Plugins/NiGanMa/: __init__.py
Plugins/NoRepeating/: __init__.py
Plugins/SeTu/: __init__.py  download_illusts.py  pixiv_auth.py  requirements.txt  y__init__.py
Plugins/SysInfo/: __init__.py
WebPlugins/: Api_LuaCaller.lua
data/: anime.json  test.py  傲娇系二次元bot词库5千词V1.2.json  可爱系二次元bot词库1.5万词V1.2.json
