[tool.poetry]
name = "mybot"
version = "0.1.0"
description = ""
authors = ["xyrlsz <2434221948@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
asyncio = "*"
Pillow = "*"
pyjson = "*"
pyyaml = "*"
websockets = "*"
bilireq = "*"
qrcode = "*"
bilibili-api-python = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
